[package]
name = "offchain-schedule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
lazy_static="1.4.0"
async_once = "0.2.6"
async-trait="0.1.53"

# gql_client = "1.0.7"

itertools = "0.10.0"
near-units = "0.2.0"
near-primitives = "0.17.0"
near-gas = {version = "0.2.3", features= ["serde", "borsh", "schemars",]}

serde = "1.0.188"
serde_json = "1.0.107"
dirs = "3.0"
near-workspaces = "0.8.0"
clap = { version = "4.3.24", features = ["derive"] }
clap_lex="0.5.0"
clokwerk = "0.4.0"
chrono = "0.4.31"

tracing = "0.1"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
dotenv = "0.15.0"

ic-agent = "0.30.2"
ic-utils = "0.30.2"
ring = "0.16.20"
num-bigint = "0.4.2"